--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,12 +18,14 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    ) */
+  background: black;
+  color: white;
+  /* rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
