--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,9 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    margin: 0;
+    padding: 0;
+   
   }
 }
 
@@ -25,7 +28,10 @@ body {
     ) */
   background: black;
   color: white;
+  margin: 0;
+  padding: 0;
   /* rgb(var(--background-start-rgb)); */
+ 
 }
 
 @layer utilities {
